feat: deletetodo updated
