# src/controllers/todo.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from 'express';
 import { findAllTodos, createTodo, deleteTodo, updateTodo, findTodo, deleteAllTodos } from '@/services/todo';
 
-import { invalidUUID, todoNotFound } from '@/utils/error';
+import { invalidUUID } from '@/utils/error';
 import { uuidValidator } from '@/utils/todo';
 
 export const getAllTodosHandler = async (req: Request, res: Response) => {
@@ -14,8 +14,6 @@ export const getTodoHandler = async (req: Request, res: Response) => {
   if (!uuidValidator(req.params.id)) throw invalidUUID;
 
   const todo = await findTodo(req.params.id);
-
-  if (!todo) throw todoNotFound;
 
   res.status(200).json(todo);
 };
@@ -32,19 +30,15 @@ export const createTodoHandler = async (req: Request, res: Response) => {
 export const deleteTodoHandler = async (req: Request, res: Response) => {
   if (!uuidValidator(req.params.id)) throw invalidUUID;
 
-  const result = await deleteTodo(req.params.id);
+  const todo = await deleteTodo(req.params.id);
 
-  if (!result) throw todoNotFound;
-
-  res.status(200).json(result);
+  res.status(200).json(todo);
 };
 
 export const updateTodoHandler = async (req: Request, res: Response) => {
   if (!uuidValidator(req.params.id)) throw invalidUUID;
 
   const todo = await updateTodo(req.params.id, req.body);
-
-  if (!todo) throw todoNotFound;
 
   res.status(201).json(todo);
 };
